--- a/src/client/components/ui/Button/Button.module.css
+++ b/src/client/components/ui/Button/Button.module.css
@@ -2,16 +2,32 @@
   background-color: #566BB1;
   border-radius: 20px;
   color: #FFF;
-  padding: .5rem 1.5rem;
+  padding: 0 1.5rem;
   display: inline-flex;
-  width: 100%;
   height: 2.5rem;
   justify-content: center;
   align-items: center;
 }
 
-.buttonLabel {
+.button:hover {
+  background-color: #F5F5FE;
+}
+
+.unbutton {
+  border-radius: 20px;
+  color: #566BB1;
+  display: inline-flex;
+  align-items: center;
+}
+
+.buttonLabelAtRight {
   margin-right: 10px;
+  font-size: 1rem;
+  vertical-align: middle;
+}
+
+.buttonLabelAtLeft {
+  margin-left: 10px;
   font-size: 1rem;
 }
 
